<resources>
    <string name="app_name">Popular Movies</string>

    <string name="no_connection">You seem to have lost connection</string>

    <string name="title">Title Goes Here:</string>
    <string name="date">Released on: July 1, 2012</string>
    <string name="rating">3.7</string>
    <string name="synopsis">This will contain a summary of the movie that has been selected.</string>
    <string name="review_author_sample">Blazorp</string>
    <string name="review_sample">This is a 5 star TextView. Holds the content of the review just as it should</string>
    <string name="trailer">Watch the Trailer</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">There weren\'t any reviews to be found!</string>
    <string name="trailer_title">Title Goes Here</string>
    <string name="no_trailers">We didn\'t find any trailers!</string>

    <string name="sort_preferences">Sort By</string>
    <string name="sort_key">Sort</string>
    <string name="pref_sort_order_key">Sort</string>

    <string name="popular_preference">Popular</string>
    <string name="rating_preference">Higest Rated</string>
    <string name="favorites_preference">Favorites</string>

    <string name="menu_add_to_favorites">Add to Favorites</string>
    <string name="menu_remove_from_favorites">Remove from Favorites</string>

    <string-array name="sort_options">
        <item name="popular">@string/popular_preference</item>
        <item name="rating">@string/rating_preference</item>
        <item name="favorites">@string/favorites_preference</item>
    </string-array>

    <string-array name="sort_descriptions">
        <item name="popular_desc">Popular</item>
        <item name="rating_desc">Rating</item>
        <item name="favorites_desc">Favorites</item>
    </string-array>
</resources>
