<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:isScrollContainer="true"
        android:paddingBottom="@dimen/scrollview_bottom_padding">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".DetailActivity">

            <ImageView
                android:id="@+id/detail_image_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_image_height"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_broken_image_black_24px" />

            <TextView
                android:id="@+id/detail_title_view"
                style="@style/detail_page_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_text_height"
                android:text="@string/title" />

            <TextView
                android:id="@+id/detail_date_view"
                style="@style/detail_page_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_text_height"
                android:text="@string/date" />

            <TextView
                android:id="@+id/detail_rating_view"
                style="@style/detail_page_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_text_height"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/detail_synopsis_view"
                style="@style/synopsis_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/scrollview_bottom_padding"
                android:text="@string/synopsis" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    style="@style/favorites_text_style"
                    android:text="@string/menu_add_to_favorites"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/favorite_image"
                    android:src="@drawable/ic_favorite_border_black_24px"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/colorAccent" />

            <TextView
                style="@style/review_header_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_text_height"
                android:text="@string/trailer" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/colorAccent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/colorAccent" />

            <TextView
                style="@style/review_header_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_text_height"
                android:text="@string/reviews" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/colorAccent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/review_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>